<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/salmon_pastel"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:id="@+id/nav_header" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/lynav_levels">



        <LinearLayout
            android:id="@+id/lyNavBiciLevel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rlHeaderLevelBicicleta"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="top">

                <TextView
                    android:id="@+id/tv_numberlevelBici"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/purple_200"
                    android:paddingTop="2dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="2dp"
                    android:text="@string/level"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:translationZ="10dp">

                </TextView>

                <ImageView
                    android:id="@+id/imgLevelBici"
                    android:layout_width="117dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/bike">

                </ImageView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cviLevelBike"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="5dp"
                    android:translationZ="10dp"
                    app:cardBackgroundColor="@color/purple_200"
                    app:cardCornerRadius="32.5dp">

                    <ImageView
                        android:id="@+id/ivLevelBike"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/level_1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvTotalTimeBike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="85dp"
                    android:paddingTop="4dp"
                    android:text="@string/time_bici" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlDataLevelBike"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="top|center"
                android:layout_marginStart="20dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvLevelBike"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/white"
                    app:cardCornerRadius="55dp">

                    <me.tankery.lib.circularseekbar.CircularSeekBar
                        android:id="@+id/csbDistanceBike"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:translationZ="5dp"
                        app:cs_circle_color="@color/white"
                        app:cs_circle_progress_color="@color/black"
                        app:cs_circle_stroke_width="8dp"
                        app:cs_circle_style="butt"
                        app:cs_disable_pointer="true"
                        app:cs_end_angle="0"
                        app:cs_max="100"
                        app:cs_negative_enabled="true"
                        app:cs_pointer_angle="0"
                        app:cs_pointer_stroke_width="8dp"
                        app:cs_progress="30"
                        app:cs_start_angle="180" />


                    <TextView
                        android:id="@+id/tvBikeDistanceLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/distance"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/tvTotalDistanceBike"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="23dp"
                        android:text="@string/Porcentaje_Bici"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/tvTotalRunsBike"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/Rutas_total"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvBikeRunsLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="75dp"
                        android:gravity="center"
                        android:text="@string/Rutas_ck"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        tools:ignore="SmallSp" />


                </androidx.cardview.widget.CardView>


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyNavCaminataLevel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="0dp" >
            <RelativeLayout
                android:id="@+id/rlHeaderLevelCaminata"
                android:layout_height="wrap_content"
                android:layout_width="110dp"
                android:gravity="top"
                >
                <TextView
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_numberlevelCaminata"
                    android:text="@string/level"
                    android:textAlignment="textEnd"
                    android:background="@color/purple_200"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="0dp"
                    android:translationZ="10dp"
                    tools:ignore="RtlSymmetry">

                </TextView>
                <ImageView
                    android:layout_width="117dp"
                    android:layout_height="75dp"
                    android:id="@+id/imgLevelCaminata"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/running"
                    >

                </ImageView>
                <androidx.cardview.widget.CardView
                    android:translationZ="10dp"
                    android:id="@+id/cviLevelCaminata"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    app:cardCornerRadius="32.5dp"
                    app:cardBackgroundColor="@color/purple_200"
                    android:layout_marginStart="5dp">

                    <ImageView
                        android:id="@+id/ivLevelCaminata"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/level_1" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/tvTotalTimeCaminata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="85dp"
                    android:text="@string/time_bici"/>



            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlDataLevelCaminata"
                android:layout_width="110dp"
                android:layout_marginStart="20dp"
                android:layout_height="110dp"
                android:layout_gravity="top|center"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvLevelCaminata"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@color/white"
                    app:cardCornerRadius="55dp">
                    <me.tankery.lib.circularseekbar.CircularSeekBar
                        android:id="@+id/csbDistanceCaminata"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:translationZ="5dp"
                        app:cs_circle_color="@color/white"
                        app:cs_circle_progress_color="@color/black"
                        app:cs_circle_stroke_width="8dp"
                        app:cs_circle_style="butt"
                        app:cs_disable_pointer="true"
                        app:cs_end_angle="0"
                        app:cs_max="100"
                        app:cs_negative_enabled="true"
                        app:cs_pointer_angle="0"
                        app:cs_pointer_stroke_width="8dp"
                        app:cs_progress="30"
                        app:cs_start_angle="180" />


                    <TextView
                        android:id="@+id/tvCaminataDistanceLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/distance"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/tvTotalDistanceCaminata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Porcentaje_Bici"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:layout_marginTop="23dp"/>

                    <TextView
                        android:id="@+id/tvTotalRunsCaminata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/Rutas_total"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvBikeRunsCaminata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="75dp"
                        android:gravity="center"
                        android:text="@string/Rutas_ck"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        tools:ignore="SmallSp" />


                </androidx.cardview.widget.CardView>



            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_user"
        android:paddingTop="16dp"
        android:text="@string/tv_usuario"
        android:textColor="@color/white"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_hi"
        android:paddingTop="16dp"
        android:text="@string/frase"
        android:textColor="@color/white"
        >

    </TextView>
</LinearLayout>